--- a/.github/workflows/deploy-container.yml
+++ b/.github/workflows/deploy-container.yml
@@ -14,6 +14,9 @@ on:
         required: true
       password:
         required: true
+    permissions:
+      contents: read
+      id-token: write
 
 jobs:
   build:
